--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,15 +15,36 @@
   </style>
 </head>
 <body>
+  <div class="container">
+      <div class="description">
+        <article class="text-description">
+          <h1>Get <strong> insights</strong> that help your business grow.</h1>
+          <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+            experience, and overall efficiency.</p>
+        </article>
+        <article class="figures">
+          <div class="companies">
+            <h2>10k+</h2>
+            <p>Companies</p>
+          </div>
+          <div class="templates">
+            <h2>314</h2>
+            <p>Templates</p>
+          </div>
+          <div class="queries">
+            <h2>12m+</h2>
+            <p>Queries</p>
+          </div>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
+        </article>
+      </div>
+        <div class="img">
+          <img src="images/image-header-desktop.jpg" alt="">
+          <div class="oppacity"></div>
+        </div>
+    
+      </div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
